<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".MoviesInfo">

    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/padding">

        <TextView
            android:id="@+id/text_title"
            style="?android:attr/textAppearanceLarge"
            android:fontFamily="@font/raleway"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding"
            android:paddingTop="@dimen/padding"
            android:textSize="@dimen/movie_title"
            android:textStyle="bold"
            tools:text="@string/example" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/layout_min"
        android:orientation="horizontal"
        android:weightSum="5">

        <ImageView
            android:id="@+id/poster_image"
            android:layout_width="@dimen/img_width"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding"
            android:layout_marginStart="@dimen/padding"
            android:orientation="vertical">

            <TextView
                android:id="@+id/release_date"
                android:fontFamily="@font/raleway"
                style="?android:attr/textAppearanceLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/release_date"
                android:textSize="@dimen/text_title" />

            <TextView
                android:id="@+id/text_date"
                android:fontFamily="@font/raleway"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_desc"
                android:layout_marginBottom="@dimen/layout_bottom"/>

            <TextView
                android:id="@+id/rate"
                style="?android:attr/textAppearanceLarge"
                android:fontFamily="@font/raleway"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating"
                android:textSize="@dimen/text_title" />

            <TextView
                android:id="@+id/text_vote_ave"
                android:fontFamily="@font/raleway"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_desc"
                android:layout_marginBottom="@dimen/layout_bottom_fab"/>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab"
                android:padding="@dimen/padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:backgroundTint="@color/colorAccent"
                android:src="@drawable/baseline_bookmark_border_white_18dp" />
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/text_synopsis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_top"
        android:minHeight="@dimen/layout_min"
        tools:text="@string/desc"
        android:textSize="@dimen/text_desc"/>

    <TextView
        android:id="@+id/htrailer"
        android:fontFamily="@font/raleway"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding"
        android:text="@string/trailers"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textSize="@dimen/text_desc"
        android:textStyle="bold"
        tools:visibility="visible" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/tList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/trailers"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/titlereviews"
        android:fontFamily="@font/raleway"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding"
        android:text="@string/reviews"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textSize="@dimen/text_desc"
        android:textStyle="bold"
        tools:visibility="visible" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvreviews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/reviews"
        tools:visibility="visible" />

</LinearLayout>
</ScrollView>